# student-lms

./: .gitignore  README.md  directus-schema.yaml  docker-compose.prod.yml  docker-compose.yaml  docker-compose.yml  init-test-db.sh  logs.txt  package.json  script.sh  setup_webhook.sh
.agents/rules/: context-and-speech.md
backend/: .dockerignore  .env  Dockerfile  alembic.ini  pyproject.toml  seed.py  seed_assets.py  track_tables.py
backend/alembic/: env.py
backend/alembic/versions/: 0275f317bc3f_add_cms_tables.py  2026-04-24_init.py  2026-04-25_refactor_quiz_to_single_table_with_jsonb.py  8a9ac76bb38f_sync_models_with_json_data.py  999999999999_fix_users_table_columns.py  a02ed9754566_merge_conflicting_heads.py  aebd67faa4c8_init.py  b2db0d085533_create_users_table_safe.py  d65be2e35a4e_add_totp_fields_to_user.py  f7c7467f618e_add_recovery_codes_to_user.py
backend/app/: main.py  seed.py
backend/app/api/: deps.py
backend/app/api/routers/: auth.py  cms.py  files.py  users.py  webhooks.py
backend/app/core/: cache.py  config.py  database.py  email.py  security.py  storage.py
backend/app/crud/: crud_user.py
backend/app/models/: __init__.py  base.py  course.py  dictionary.py  faq.py  globals.py  page.py  quiz.py  site_content.py  user.py
backend/app/schemas/: course.py  quiz.py  token.py  user.py  webhook.py
data/: data.json
frontend/: .dockerignore  .gitignore  Dockerfile  env.d.ts  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  server.js  server.ts  vite.config.ts
frontend/.husky/: pre-commit
frontend/src/: App.vue  entry-client.ts  (+2 more)
(+43 files in other folders)
