[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioboto3>=15.5.0",
    "aiosmtplib>=3.0.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "email-validator>=2.3.0",
    "fastapi>=0.135.1",
    "jwt>=1.4.0",
    "passlib>=1.7.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyotp>=2.9.0",
    "python-multipart>=0.0.22",
    "redis[hiredis]>=7.4.0",
    "sqlalchemy>=2.0.48",
    "uvicorn[standard]>=0.42.0",
]
