[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioboto3>=15.5.0",
    "aiosmtplib>=3.0.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt<4.0.0",
    "cryptography>=44.0.0",
    "email-validator>=2.3.0",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "nh3>=0.2.0",
    "passlib>=1.7.4",
    "pillow>=12.2.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "pyotp>=2.9.0",
    "python-multipart>=0.0.22",
    "qrcode>=8.2",
    "redis[hiredis]>=7.4.0",
    "segno>=1.6.0",
    "sqlalchemy>=2.0.48",
    "uvicorn[standard]>=0.42.0",
]
